fix header z-index

--- a/packages/web/src/components/Layout/Header/Header.module.scss
+++ b/packages/web/src/components/Layout/Header/Header.module.scss
@@ -18,6 +18,7 @@
   position: fixed;
   width: 100%;
   transition: 0.5s ease-in-out;
+  z-index: 99;
 
   span,
   .title {
